--- a/scripts/output/comparison/notebook_templates/EDGETransportComparison.Rmd
+++ b/scripts/output/comparison/notebook_templates/EDGETransportComparison.Rmd
@@ -35,15 +35,14 @@ EJroad_all = readRDS("EJroad_all.RDS")
 fleet_all = readRDS("fleet_all.RDS")
 salescomp_all = readRDS("salescomp_all.RDS")
 ESmodecap_all = readRDS("ESmodecap_all.RDS")
-CO2km_int_newsales_all = readRDS("CO2km_int_newsales_all.RDS")
 EJpass_all = readRDS("EJfuelsPass_all.RDS")
 EJfrgt_all = readRDS("EJfuelsFrgt_all.RDS")
+EJModeFuel_all = readRDS("EJModeFuel_all.RDS")
 emidem_all = readRDS("emidem_all.RDS")
-elecdem_all = readRDS("elecdem_all.RDS")
 costs_all = readRDS("costs_all.RDS")
 pref_FV_all = readRDS("pref_FV_all.RDS")
 dempkm_cap_all = readRDS("demgdpcap_all.RDS")
-
+ESmodeabs_all = readRDS("ESmodeabs_all.RDS")
 setConfig(forcecache=T)
 
 cols <- c("NG" = "#d11141",
@@ -109,40 +108,36 @@ cols <- c("NG" = "#d11141",
           "FE|Transport" = "#1e90ff",
           "FE|Buildings" = "#d2b48c",
           "FE|Industry" = "#919191",
-          "ElecEra" = "#00b159",
-          "ElecEraWise" = "#68c6a4",
-          "HydrHype" = "#00aedb",
-          "HydrHypeWise" = "#o3878f",
-          "ConvCase" = "#113245",
-          "ConvCaseWise" = "#d11141",
-          "NDC" = "#d11141",
-          "NPi_IC" = "#f6ab6c",
-          "Budg_BE" = "#00b159",
-          "Budg_IC" = "#113245",
-          "Budg_ICsyn" = "orchid",
-          "Budg_FC" = "#00aedb",
-          "Budg_BE-LS" = "#68c6a4",
-          "Budg_IC-LS" = "#d11141",
-          "SynSurge" = "orchid")
+          "LDVs Electricity" = "#00b159", 
+          "Bus+Rail Electricity" = "#7cfc00", 
+          "Road+Rail freight Electricity" = "#68c6a4",
+          "LDVs Hydrogen" = "#00aedb",
+          "Bus+Rail Hydrogen" = "#00bfff",
+          "Road+Rail freight Hydrogen" = "#035aa6",
+          "Domestic Aviation Hydrogen" = "#a5d7f1",
+          "LDVs Hydrocarbons" = "#8c8c8c",
+          "Bus+Rail Hydrocarbons" = "#b2b2b2",
+          "Road+Rail freight Hydrocarbons" = "#787f77",
+          "Domestic Aviation Hydrocarbons" = "#d7d7d7",
+          "Domestic Shipping Hydrocarbons" = "#978888",
+          "International Aviation Hydrocarbons" = "#474847",
+          "International Shipping Hydrocarbons" = "#53515b")
 
 legend_ord_modes <- c("Freight Rail", "Truck", "Shipping", "International Shipping", "Domestic Shipping",  "Trucks",
                 "Motorbikes", "Small Cars", "Large Cars", "Van",
                 "International Aviation", "Domestic Aviation","Bus", "Passenger Rail",
                 "Freight", "LDV", "Pass non LDV", "Freight (Inland)", "Pass non LDV (Domestic)", "Non motorized")
+legend_ord_modes_fuel <- c("LDVs Electricity", "Bus+Rail Electricity", "Road+Rail freight Electricity",
+                           "LDVs Hydrogen", "Bus+Rail Hydrogen", "Road+Rail freight Hydrogen", "Domestic Aviation Hydrogen",
+                           "LDVs Hydrocarbons", "Bus+Rail Hydrocarbons", "Road+Rail freight Hydrocarbons", "Domestic Aviation Hydrocarbons", "Domestic Shipping Hydrocarbons", "International Aviation Hydrocarbons", "International Shipping Hydrocarbons")
 
-legend_ord_fuels <- c("BEV", "Electricity", "Hybrid Electric", "FCEV", "Hydrogen", "Hybrid Liquids", "Liquids", "Oil", "Biodiesel", "Synfuel", "Synfuels", "Gases","NG")
+legend_ord_fuels <- c("BEV", "Electricity", "Electric", "Hybrid Electric", "FCEV", "Hydrogen", "Hybrid Liquids", "Liquids", "Oil", "Biodiesel", "Biofuel", "Biomass", "Synfuel", "Synfuels", "Gases","NG")
 
 legend_ord_costs <- c("Inconvenience", "Risk", "Charging", "Model availability", "Range anxiety", "Refuel availability", "Policy induced inconvenience","Fuel", "Purchase", "O&M")
 
 legend_ord_emissions <- c("Emi|CO2|Industry|Gross", "Emi|CO2|Buildings|Direct", "Emi|CO2|Transport|Demand", "Emi|CO2|Energy|Supply|Gross", "Emi|CO2|Land-Use Change","Emi|CO2|CDR|BECCS")
 
-legend_ord = c(legend_ord_modes, legend_ord_fuels, legend_ord_costs)
-
-## mapping for scenario names
-mapping_scens = data.table(scenario = c("Budg1100_ConvCase", "Budg1100_ElecEra", "Budg1100_HydrHype", "Budg1100_SynSurge", "NDC_ConvCase", "NPi", "Budg1100_ConvCaseWise", "Budg1100_ElecEraWise", "Budg1100_HydrHypeWise", "Budg1100_SynSurgeWise", "NDC_ConvCaseWise"), scen_name = c("ConvCase", "ElecEra", "HydrHype", "SynSurge", "NDC", "NPi", "ConvCaseWise", "ElecEraWise", "HydrHypeWise", "SynSurgeWise", "NDCWise"))
-
-mapping_scens_paper = data.table(scenario = c("Budg1100_ConvCase", "Budg1100_ElecEra", "Budg1100_HydrHype", "Budg1100_SynSurge", "NDC_ConvCase", "NPi_ConvCase", "Budg1100_ConvCaseWise", "Budg1100_ElecEraWise"), scen_name = c("Budg_IC", "Budg_BE", "Budg_FC", "Budg_ICsyn", "NDC_IC", "NPi_IC", "Budg_IC-LS", "Budg_BE-LS"))
-
+legend_ord = c(legend_ord_modes, legend_ord_fuels, legend_ord_costs, legend_ord_modes_fuel)
 
 regionplot = "EUR"
 
@@ -164,83 +159,61 @@ theme2use <- theme_minimal()+
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
 ## Vintages
 vintcomparisonpf = function(dt){
-  dt = dt[year %in% c(2015, 2050, 2100)]
   plot = ggplot()+
-    geom_bar(data = dt,
+    geom_bar(data = dt[year %in% c(2015, 2050, 2100)],
              aes(x=scenario, y=value, group=interaction(variable, technology),
                  fill = technology, width=.75), alpha = 0.5, position="stack", stat = "identity", width = 0.5)+
     geom_bar(data = dt,
              aes(x=scenario, y=value, group=interaction(variable, technology),
                  fill = technology, alpha = factor(alphaval),  width=.75), position="stack", stat = "identity", width = 0.5, color = "black", size=0.05)+
     guides(fill = guide_legend(reverse=TRUE))+
-    facet_grid(year~region) +
+    facet_grid(year~region, scales = "free") +
     theme2use +
     scale_alpha_discrete(breaks = c(1,0), name = "Status", labels = c("Vintages","New additions")) +
     guides(linetype=FALSE,
            fill=guide_legend(reverse=FALSE, title="Transport mode"))+
     scale_fill_manual(values = cols)+
     labs(y = "[million Veh]", x="", title = "LDV fleet")
-    return(plot)
+## only EU
+  regi_EUR = c("ENC","ECS","ESC","ECE","FRA","DEU","UKI","ESW")
+  dt_EU = dt[region %in% c(regi_EUR)]
+  dt_EU = dt_EU[,.(value = sum(value)),by = c("technology","scenario","year")]
+maps_scenarios = data.table(scenario = c("10c_Balanced_ref_Femed_edgeT",  "10c_Electrif_EconWide-bdg43-DEUbudg8_start2025gd40_edgeT", "10c_H2_EconWide-bdg43-DEUbudg8_start2025gd40_edgeT", "10c_Synfuel_EconWide-bdg43-DEUbudg8_edgeT"),
+			      scen_name = c("Baseline", "Direct Electr.", "Hydrogen Electr.", "E-fuels"))
+  dt_EU = merge(dt_EU, maps_scenarios, by = "scenario")
+  legend_scen = c("Baseline", "Direct Electr.", "Hydrogen Electr.", "E-fuels")
+  #dt_EU[, scen_name:= factor(scen_name, levels = legend_scen)]
+plot_EU = ggplot()+
+       geom_bar(data = dt_EU[year %in% c(2020, 2030, 2040, 2050)],
+             aes(x=year, y=value, group=technology,
+                 fill = technology), position="stack", stat = "identity", color = "black")+
+    guides(fill = guide_legend(reverse=TRUE))+
+    facet_grid(~scen_name) +
+    theme2use +
+    scale_alpha_discrete(breaks = c(1,0), name = "Status", labels = c("Vintages","New additions")) +
+    guides(linetype=FALSE,
+           fill=guide_legend(reverse=FALSE, title="Transport mode"))+
+    scale_fill_manual(values = cols)+
+    labs(y = "[million Veh]", x="", title = "")
+
+    return(list(plot = plot, plot_EU = plot_EU))
 }
 
-vintcomparisonpf(fleet_all)
-
-```
-
-## Fleet total
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-## Vintages as line plot, useful to compare the totals (e.g. normal VS WiseWays)
-
-vintcomparisontotpf = function(dt, rp){
-    dt = dt[,.(value = sum(value)), by = .(region, scenario, year)]
-
-    dt[, type := ifelse(grepl("Wise",scenario), "WiseWays", "UsualUse"), by = c("region", "year", "scenario")]
-    dt[, scenario := ifelse(grepl("NDC", scenario), "NDC", scenario)]
-    dt[, scenario := gsub(".*_", "", scenario)]
-    dt[, scenario := gsub("Wise", "", scenario)]
-
-    plot_all = ggplot()+
-    geom_line(data = dt,
-             aes(x=year, y=value, group = interaction(scenario, type),
-                 color = scenario, linetype = type))+
-    facet_wrap(~region)+
-    theme2use +
-    labs(y = "[million Veh]", x="", title = "LDV fleet")+
-      scale_color_manual("Scenario", values = cols)
-
-
-    plot_reg = ggplot()+
-    geom_line(data = dt[region == rp & year <= 2050],
-             aes(x=year, y=value, group=interaction(scenario, type),
-                 color = scenario, linetype = type))+
-    theme2use +
-    theme(axis.text.x = element_text(angle = 90, size=7, vjust=0.5, hjust=1),
-          axis.text.y = element_text(size=7),
-          axis.title.y = element_text(size=7),
-          title = element_text(size=7),
-          legend.text = element_text(size=7),
-          strip.text = element_text(size=7))+
-    labs(y = "[million Veh]", x="")+
-      scale_color_manual("Scenario", values = cols)+
-      scale_linetype_manual("Lifestyle", values = c(1,2))
-    return(plot = list(plot_all = plot_all, plot_reg = plot_reg))
-}
-
-p=vintcomparisontotpf(dt = fleet_all, rp = regionplot)
+p = vintcomparisonpf(fleet_all)
 p
-aspect_ratio <- 1.5
-height <- 3
-ggsave("numvehicles.png", p$plot_reg, dpi=500, height = height , width = height * aspect_ratio)
+aspect_ratio <- 0.5
+width <- 22
+## indexed to 2015
+ggsave("vintages_LDV.jpg", p$plot_EU, dpi=500, height = width* aspect_ratio , width = width, units = "cm")
+
 
 ```
-
 
 ## Sales composition
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-salescompf = function(dt){
 
+salescompf = function(dt){
   plot = ggplot()+
     geom_bar(data = dt, aes(x=as.numeric(as.character(year)),y=shareFS1, group = technology, fill = technology), position = position_stack(), stat = "identity")+
     facet_grid(region ~ scenario)+
@@ -322,7 +295,7 @@ EJmodepf(EJmode_all)
 ## Energy services, per capita, by mode
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-ESmodecappf = function(dt, rp){
+ESmodecappf = function(dt){
   dt[, vehicle_type_plot := factor(vehicle_type_plot, levels = legend_ord)]
   plot_frgt = ggplot()+
     geom_area(data = dt[mode == "freight" & year >= 2020], aes(x=year, y=cap_dem, group = vehicle_type_plot, fill = vehicle_type_plot), color="black", size=0.05, position= position_stack())+
@@ -454,70 +427,21 @@ emidem_pf = function(dt){
     labs(x = "", y = "CO2 emissions [Mt/CO2]", title = "Emissions from transport demand (including biofuels)")+
     facet_grid(~region) +
     theme2use
-
   return(plot)
 }
-
 emidem_pf(emidem_all)
 ```
-
-## Electricity demand
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-elecdem_pf = function(dt, rp){
- dt[, scenario := as.character(scenario)]
- dt[, type := ifelse(grepl("Wise",scenario), "WiseWays", "UsualUse"), by = c("region", "year", "scenario")]
- dt[, scenario := ifelse(grepl("NDC", scenario), "NDC", scenario)]
- dt[, scenario := gsub(".*_", "", scenario)]
- dt[, scenario := gsub("Wise", "", scenario)]
-
-  plot_all = ggplot()+
-    geom_line(data = dt, aes(x = year, y = value, group = interaction(scenario, type), color = scenario, linetype = type))+
-    labs(x = "", y = "Secondary electricity [EJ]")+
-    facet_grid(~region) +
-    theme2use +
-     scale_linetype_manual("", values = c(1,2))+
-     scale_color_manual("Scenario", values = cols)
-
-   plot_regi = ggplot()+
-    geom_line(data = dt[region == rp & year <= 2050], aes(x = year, y = value, group = interaction(scenario, type), color = scenario, linetype = type))+
-    labs(x = "", y = "Secondary electricity [EJ]") +
-    theme2use +
-     scale_linetype_manual("Lifestyle", values = c(1,2))+
-     scale_color_manual("Scenario", values = cols)
-
-  plot = list(plot_all = plot_all, plot_regi = plot_regi)
-  return(plot)
-}
-
-p = elecdem_pf(elecdem_all, rp = regionplot)
-
-p$plot_all
-
-print(paste0("Focus on ", regionplot))
-
-p$plot_regi
-
-aspect_ratio <- 1.5
-height <- 6
-ggsave("elecdemand.png", p$plot_regi, dpi=500, height = height , width = height * aspect_ratio)
-
-
-
-```
-
 
 
 ## Demand per capita VS gdp per capita
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
 demcapgdpcap_pf = function(dt) {
-
 dt = dt[year >= 2005]
 dt = dt[, year := as.character(year)]
-dtsec = unique(dt[, c("region", "year", "demsec", "sector", "gdpcap", "scenario")])
+dtsec = unique(dt[, c("region", "year", "demsec", "sector", "GDP_cap", "scenario")])
 psec = ggplot()+
- geom_line(data = dtsec, aes(x = gdpcap, y = demsec, color = region, group = interaction(region, scenario), linetype = scenario))+
- geom_point(data = dtsec[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = gdpcap, y = demsec, shape = year, group = interaction("region", "scenario"), color = region))+
+ geom_line(data = dtsec, aes(x = GDP_cap, y = demsec, color = region, group = interaction(region, scenario), linetype = scenario))+
+ geom_point(data = dtsec[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = GDP_cap, y = demsec, shape = year, group = interaction("region", "scenario"), color = region))+
   facet_wrap(~sector, scales = "free") +
   theme2use +
   theme(axis.text.x = element_text(angle = 90, hjust = 1),
@@ -528,10 +452,10 @@ psec = ggplot()+
 
 
 
-dtappl = unique(dt[, c("region", "year", "demappl", "appl", "gdpcap", "scenario")])
+dtappl = unique(dt[, c("region", "year", "demappl", "appl", "GDP_cap", "scenario")])
 pappl = ggplot()+
-  geom_line(data = dtappl, aes(x = gdpcap, y = demappl, color = region, group = interaction(region, scenario), linetype = scenario))+
-  geom_point(data = dtappl[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = gdpcap, y = demappl, shape = year, group = region, color = region))+
+  geom_line(data = dtappl, aes(x = GDP_cap, y = demappl, color = region, group = interaction(region, scenario), linetype = scenario))+
+  geom_point(data = dtappl[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = GDP_cap, y = demappl, shape = year, group = region, color = region))+
   facet_wrap(~appl, scales = "free") +
   theme2use +
   theme(axis.text.x = element_text(angle = 90, hjust = 1),
@@ -541,10 +465,10 @@ pappl = ggplot()+
   labs(y = "Per capita demand [km/capita]", x="GDP per capita [$/person]")
 
 
-dttype = unique(dt[, c("region", "year", "demtype", "type", "gdpcap", "scenario")])
+dttype = unique(dt[, c("region", "year", "demtype", "type", "GDP_cap", "scenario")])
 ptype = ggplot()+
-  geom_line(data = dttype, aes(x = gdpcap, y = demtype, color = region, group = interaction(region, scenario), linetype = scenario))+
-  geom_point(data = dttype[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = gdpcap, y = demtype, shape = year, group = region, color = region))+
+  geom_line(data = dttype, aes(x = GDP_cap, y = demtype, color = region, group = interaction(region, scenario), linetype = scenario))+
+  geom_point(data = dttype[year %in% c("2020", "2030", "2050", "2070", "2100")], aes(x = GDP_cap, y = demtype, shape = year, group = region, color = region))+
   facet_wrap(~type, scales = "free") +
   theme2use +
   theme(axis.text.x = element_text(angle = 90, hjust = 1),
@@ -584,337 +508,9 @@ ptypetime = ggplot()+
         legend.title = element_text(size=10),
         axis.title = element_text(size = 10))+
   labs(y = "Per capita demand [km/capita]", x="")
-
-
-
 p = list(psec = psec, pappl = pappl, ptype = ptype, psectime = psectime, pappltime = pappltime, ptypetime = ptypetime)
-
 return(p)
 }
-
 demcapgdpcap_pf(dempkm_cap_all)
 ```
 
-## Focus on selected region
-
-## Vintages
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-
-## only in case there are 10 scenarios (5 scenarios for each lifestyle realization) the following chunk of code is to be run
-if (length(unique(fleet_all$scenario)) == 10 & any(grepl("Wise", unique(fleet_all$scenario)))) {
-
-vintcomparison_regi_pf = function(dt, rp){
-  dt = dt[year %in% c(2020, 2030, 2050) & region == rp]
-
-  ## define the maximum on the y-axis depending on the maximum value across scenarios
-  dt[, sum := sum(value), by = c("year", "scenario")]
-  dt[, maxval := max(sum)]
-  dthist = dt[year == 2020 & scenario == unique(dt$scenario)[1]][, scenario := "Historical"]
-  ## attribute "type" WiseWays and UsualUse and simplify scenario names
-  dt[, type := ifelse(grepl("Wise",scenario), "WiseWays", "UsualUse"), by = c("region", "year", "scenario")]
-  dt[, scenario := ifelse(grepl("NDC", scenario), "NDC", scenario)]
-  dt[, scenario := gsub(".*_", "", scenario)]
-  dt[, scenario := gsub("Wise", "", scenario)]
-
-  ## select a random scenario for 2020 and attribute the label "Historical" (no value on the x axis)
-  phist_no_name = ggplot()+
-    geom_bar(data = dthist,
-             aes(x=scenario, y=value, group= technology,
-                 fill = technology, width=.75), position="stack", stat = "identity", width = 0.5, alpha = 0.9)+
-    ylim(0,unique(dt[, maxval]))+
-    facet_wrap(~ year, nrow = 1)+
-    theme2use +
-    theme(axis.text.x = element_blank(),
-          legend.position = "none")+
-    scale_fill_manual(values = cols)+
-    labs(y = "[million Veh]", x="")
-
-  ## historical plot, with name on the x axis
-  phist = phist_no_name+
-    theme(axis.text.x = element_text(angle = 90, size=14, vjust=0.5, hjust=1))
-
-
-  ## Usual Use scenarios (no names on the x-axis, as it's going to be the top row)
-  pnormal = ggplot()+
-    geom_bar(data = dt[year != 2020 & !grepl("Wise", type)],
-             aes(x=scenario, y=value, group=interaction(variable, technology),
-                 fill = technology, width=.75), position="stack", stat = "identity", width = 0.5, alpha = 0.9)+
-    theme2use +
-    ylim(0,unique(dt[, maxval]))+
-    facet_grid(type ~ year)+
-    theme(axis.text.x = element_blank(),
-          axis.text.y = element_blank())+
-    guides(fill=guide_legend(title="Powertrain"))+
-    scale_fill_manual(values = cols)+
-    labs(y = "", x="")
-
-    ## WiseWays scenarios (names on the x-axis)
-    pwise = ggplot()+
-    geom_bar(data = dt[year != 2020 & grepl("Wise", type)],
-             aes(x=scenario, y=value, group=interaction(variable, technology),
-                 fill = technology, width=.75), position="stack", stat = "identity", width = 0.5, alpha = 0.9)+
-    ylim(0,unique(dt[, maxval]))+
-    facet_grid(type ~ year)+
-    theme2use +
-    guides(fill=guide_legend(title="Powertrain"))+
-    scale_fill_manual(values = cols)+
-    labs(y = "", x="")
-
-   ## get legend of plots
-   techlegend <- get_legend(pwise)
-
-   ## remove legend from plots
-   pwise = pwise +
-   theme(legend.position = "none")
-
-   pnormal = pnormal +
-   theme(legend.position = "none")
-
-   ## first row
-   plot1 = plot_grid(phist_no_name, pnormal, align = "h", ncol = 2, rel_widths = c(0.16,0.84))
-   ## second row
-   plot2 = plot_grid(phist, pwise, align = "h", ncol = 2, rel_widths = c(0.16,0.84))
-   ## both bar plots
-   plot3 = plot_grid(plot1, plot2, align = "v", ncol = 1, rel_heights = c(0.45,0.55))
-   ## create legend stacked with blank sqares to have it centered
-   blank <- grid.rect(gp=gpar(col="white"))
-   techlegend = plot_grid(blank, techlegend, blank, align = "h", ncol = 1, rel_heights  = c(0.05, 0.7,0.25))
-   ## combine all elements in final plot
-   plotvint = plot_grid(plot3, techlegend, align = "h", ncol = 2, rel_widths  = c(0.8,0.2))
-
-   return(plotvint)
-}
-
-p = vintcomparison_regi_pf(fleet_all, rp = regionplot)
-
-p
-
-
-aspect_ratio <- 1.5
-height <- 8
-ggsave("pvint.png", p, dpi=500, height = height , width = height * aspect_ratio)
-
-}
-```
-
-## Costs of LDVs by technology
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-costspf = function(dt, rp, mapping_scens){
-  dt = dt[region == rp]
-  map = data.table(name = c("Risk", "Charging", "Model availability", "Range anxiety", "Refuel availability", "Fuel", "Policy induced inconvenience", "Purchase", "O&M"),
-                   logit_type = c("prisk", "pchar", "pmod_av", "prange", "pref", "fuel_price", "pinco_tot", "purchase", "other"),
-                   type = c("inc", "inc", "inc", "inc", "inc", "real", "inc", "real", "real"))
-  dt = merge(dt, map, by = "logit_type")
-  dt_inc = dt[type == "inc"]
-  dt_inc = dt_inc[,.(cost = sum(cost)), by = c("region", "year", "type", "technology", "scenario")]
-  dt_tot = rbind(dt_inc[, c("name", "logit_type") := list("Inconvenience", "pinc")], dt[type == "real"])
-  dt[, name := factor(name, levels = legend_ord)]
-  dt_tot[, name := factor(name, levels = legend_ord)]
-  dt_tot[, alph := ifelse(logit_type=="pinc", 0.6, 0.9)]
-
-  dt = merge(dt, mapping_scens, by = "scenario")
-  dt[, scen_name := ifelse(is.na(scen_name), scenario, scen_name)]
-
-  dt_tot = merge(dt_tot, mapping_scens, by = "scenario")
-  dt_tot[, scen_name := ifelse(is.na(scen_name), scenario, scen_name)]
-
-  plot1 = ggplot()+
-         geom_bar(data = dt[type == "inc"], aes(x = year, y = cost, group = name, fill = name), position = "stack", stat = "identity")+
-facet_grid(scen_name~technology) +
-    theme2use +
-    guides(fill=guide_legend(title="Cost component"))+
-    scale_fill_manual(values = cols)+
-    labs(y = "Costs [$/pkm]", x="")
-
-  plot2 = ggplot()+
-         geom_bar(data = dt_tot, aes(x = year, y = cost, group = name, fill = name, alpha = alph), position = "stack", stat = "identity")+
-facet_grid(scen_name~technology)+
-    theme2use +
-    scale_fill_manual(values = cols)+
-    labs(y = "Costs [$/pkm]", x="")+
-      scale_alpha(range=c(0.4,1)) +
-  guides(alpha=FALSE, linetype=FALSE,
-         fill=guide_legend(reverse=TRUE, title="Cost component"))
-
-  if (length(unique(dt$scenario)) == 10) {
-    ## plot only UsualUse
-    plot3 = ggplot()+
-         geom_bar(data = dt[type == "inc" & year %in% c(2020, 2050)& !grepl(pattern = "Wise", scen_name)], aes(x = as.character(year), y = cost, group = name, fill = name), alpha = 0.9, position = "stack", stat = "identity")+
-facet_grid(scen_name~technology)+
-    theme2use +
-    guides(fill=guide_legend(title="Cost component"))+
-    scale_fill_manual(values = cols)+
-    labs(y = "Costs [$/pkm]", x="")
-
-  plot4 = ggplot()+
-         geom_bar(data = dt_tot[year %in% c(2020, 2050) & !grepl(pattern = "Wise",scen_name)], aes(x = as.character(year), y = cost, group = name, fill = name, alpha = alph), position = "stack", stat = "identity")+
-facet_grid(scen_name~technology)+
-    theme2use +
-    scale_fill_manual(values = cols)+
-    labs(y = "Costs [$/pkm]", x="")+
-      scale_alpha(range=c(0.4,1)) +
-  guides(alpha=FALSE, linetype=FALSE,
-         fill=guide_legend(reverse=TRUE, title="Cost component"))
-
-
-  plot = list(plot1 = plot1, plot2 = plot2, plot3 = plot3, plot4 = plot4)
-
-  }
-  else{
-    plot = list(plot1 = plot1, plot2 = plot2)
-  }
-
-
-return(plot)
-}
-
-p = costspf(costs_all, rp = regionplot, mapping_scens)
-
-p$plot1
-p$plot2
-
-if (!is.null(p$plot3)) {
-
-  print(paste0("Focus on ", regionplot, " for Usual Use"))
-  p$plot3
-  p$plot4
-
-  aspect_ratio <- 2
-  height <- 6
-
-  ggsave("LDVinccost.png", p$plot3, dpi=500, height = height , width = height * aspect_ratio)
-  ggsave("LDVtotcost.png", p$plot4, dpi=500, height = height , width = height * aspect_ratio)
-
-}
-
-
-
-```
-
-## Sales composition
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-salescom_regi_pf = function(dt, rp){
-
-  plot = ggplot()+
-    geom_area(data = dt[region == rp], aes(x=as.numeric(as.character(year)), y = shareFS1, group = technology, fill = technology), position = position_fill())+
-    facet_wrap( ~ scenario, nrow = 1)+
-    scale_fill_manual("Technology", values = cols)+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2015,2030,2050, 2100))+
-    scale_y_continuous(labels = scales::percent)+
-    theme2use +
-    labs(x = "", y = "[%]", title = "Market share of new LDV sales")
-  return(plot)
-}
-
-p = salescom_regi_pf(salescomp_all, rp = regionplot)
-
-p
-
-aspect_ratio <- 2
-height <- 5
-ggsave("psales.png", p, dpi=500, height = height , width = height * aspect_ratio)
-
-
-```
-
-
-## CO2 intensity of new sales
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-CO2km_int_regi_newsalespf = function(dt, rp){
-  dt = dt[!is.na(gCO2_km_ave)]
-  if (rp == "EUR"){
-    ## add historical values
-  historical_values = data.table(year = c(2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018), emi = c(159, 157, 145, 140, 137, 132, 128, 124, 120, 119, 119, 120))
-
-  targets = data.table(name = c("2021 target", "2025 target", "2030 target"), value = c(95, 95*(1-0.15), 95*(1-0.37)))
-
-  dt[, type := ifelse(grepl("Wise",scenario), "WiseWays", "UsualUse"), by = c("region", "year", "scenario")]
-    dt[, scenario := ifelse(grepl("NDC", scenario), "NDC", scenario)]
-    dt[, scenario := gsub(".*_", "", scenario)]
-    dt[, scenario := gsub("Wise", "", scenario)]
-
-   plot = ggplot()+
-    geom_line(data = dt[year >= 2020 & year <= 2050 & region == rp], aes(x = year, y = gCO2_km_ave, group = interaction(scenario, type), color = scenario, linetype = type))+
-    geom_point(data = historical_values, aes(x = year, y = emi), color = "grey20")+
-    geom_point(data = targets, aes(x = c(2021, 2025, 2030), y = value, shape = name), color = "grey20", alpha = 0.5, size = 2)+
-    geom_text(data = targets, aes(y = value+5, x = c(2021, 2025, 2030), label = name), size = 5)+
-    labs(y = expression(paste("[", gCO["2"], "/km]")), x = "")+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2010, 2020, 2030, 2050, 2100))+
-    theme2use +
-    guides(shape = FALSE)+
-    scale_linetype_manual("Lifestyle", values = c(1,2))
-
-  } else {
-  ## historical values are not available
-  plot = ggplot()+
-    geom_line(data = dt[year >= 2020 & region == rp], aes(x = year, y = gCO2_km_ave, group = scenario, color = scenario))+
-    labs(y = expression(paste("[", gCO["2"], "/km]")), x = "")+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2020, 2030, 2050, 2100))+
-    theme2use +
-    guides(linetype = FALSE)
-
-   }
-  return(plot)
-}
-
-p = CO2km_int_regi_newsalespf(CO2km_int_newsales_all, rp = regionplot)
-
-p
-
-```
-
-## Final energy road
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=14, fig.height=12}
-EJroad_regi_pf = function(dt, rp){
-  dt[, technology := factor(technology, levels = legend_ord)]
-  dt = dt[year >= 2020]
-  plotLDV = ggplot()+
-    geom_area(data = dt[subsector_L1 == "trn_pass_road_LDV_4W" & region == rp], aes(x=year, y=demand_EJ, group = technology, fill = technology), color = "black", size=0.05, position= position_stack())+
-    labs(x = "", y = "[EJ]", title = "LDV Final Energy demand")+
-    facet_wrap(~scenario, nrow = 1)+
-    scale_fill_manual("Technology", values = cols, breaks=legend_ord)+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2020, 2030,2050, 2100)) +
-    theme2use
-
-
-   plotBus = ggplot()+
-    geom_area(data = dt[subsector_L1 %in% c("trn_pass_road_bus_tmp_subsector_L1", "Bus_tmp_subsector_L1") & region == rp], aes(x=year, y=demand_EJ, group = technology, fill = technology), color = "black", size=0.05, position= position_stack())+
-    labs(x = "", y = "[EJ]", title = "Buses Final Energy demand")+
-    facet_wrap(~scenario, nrow = 1)+
-    scale_fill_manual("Technology", values = cols, breaks=legend_ord)+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2020, 2030,2050, 2100)) +
-    theme2use
-
-
-   plotTruck = ggplot()+
-    geom_area(data = dt[subsector_L1 %in% c("trn_freight_road_tmp_subsector_L1") & region == rp], aes(x=year, y=demand_EJ, group = technology, fill = technology), color = "black", size=0.05, position= position_stack())+
-    labs(x = "", y = "[EJ]", title = "Trucks Final Energy demand")+
-    facet_wrap(~scenario, nrow = 1)+
-    scale_fill_manual("Technology", values = cols, breaks=legend_ord)+
-    expand_limits(y = c(0,1))+
-    scale_x_continuous(breaks = c(2020, 2030,2050, 2100)) +
-    theme2use
-
-  return(plotlist = list(plotLDV = plotLDV, plotBus = plotBus, plotTruck = plotTruck))
-}
-
-plist = EJroad_regi_pf(EJroad_all, rp = regionplot)
-
-plist
-
-pLDV = plist[["plotLDV"]]
-
-pBus = plist[["plotBus"]]
-
-pTruck = plist[["plotTruck"]]
-
-```
